third_party/blink/web_tests/external/wpt/css/css-typed-om/idlharness-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Element: original interface defined assert_true: Original interface should be defined expected true got false
PASS Partial interface CSSStyleRule: original interface defined
PASS Partial interface mixin ElementCSSInlineStyle: original interface mixin defined
PASS Partial namespace CSS: original namespace defined
Harness: the test ran to completion.

